# lib/db/src/schema/users.ts
@@ -17,6 +17,9 @@ export const usersTable = pgTable("users", {
   avatarUrl: text("avatar_url"),
   phone: text("phone"),
   dateOfBirth: text("date_of_birth"),
+  gender: text("gender"),
+  nationality: text("nationality"),
+  city: text("city"),
   address: text("address"),
   country: text("country"),
   studentId: text("student_id").unique(),
